--- a/styles/main.css
+++ b/styles/main.css
@@ -66,7 +66,7 @@ html, body {
 
 [id^=digit-] {
     font-size: 14px;
-    letter-spacing: 0.04em; 
+    letter-spacing: 0.04em;
 }
 
 #digit-1 { color: var(--font-color-1); }
@@ -116,3 +116,18 @@ html, body {
     75% { color: hsl(.75turn, 90%, 65%); }
     100% { color: hsl(1turn, 90%, 65%); }
 }
+
+/*---------------------*/
+/*    MISCELLANEOUS    */
+/*---------------------*/
+
+.ant {
+    display: inline list-item;
+    mask: url(https://img.icons8.com/?id=NWDdvWhVKCr9)  no-repeat center / contain;
+}
+
+#digit-1 > .ant { background-color: var(--font-color-1); }
+
+#digit-2 > .ant { background-color: var(--font-color-2); }
+
+#digit-3 > .ant { background-color: var(--font-color-3); }
